--- a/cache_warmer_config.ini
+++ b/cache_warmer_config.ini
@@ -1,8 +1,8 @@
 ;config.ini
 [sisense_credentials]
 sisense_base_url = http://localhost:8081
-email = dan.kushner@sisense.com
-password = dk2388
+email = <email>
+password = <pass>
 
 ;adding number of dashboards example oid=58a5d333f26a239851000014,58a5d333f26a239851000013,<oid_3>, <oid_4>.......
 [dashboards_id]
